#7 Push updates for routes overview page after plug-in addition/removal